--- a/src/contact.jade
+++ b/src/contact.jade
@@ -15,3 +15,6 @@ block content
 							| факс.: +7 (812) 313 65 99
 						p www.balttehnika.ru <br>
 							| info@balttehnika.ru
+				// /.contact--addr
+			// /.contact
+		// /.wrapper
