--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,30 +19,14 @@ $gray: #808080;
 html {
 	width: 100%;
 	min-width: 820px;
-	background: url(img/bg-left.jpg) 0 0 no-repeat;
-	background-attachment: fixed;
-	@media (max-width: 1600px) {
-		background-image: none;
-	}
-	@media (min-width: 1600px) {
-		background-position: -100px 0;
-	}
-	@media (min-width: 1750px) {
-		background-position: 0 0;
-	}
 }
 body {
 	width: 100%;
 	font-size: 10px;
-	background: url(img/bg-right.jpg) 100% 40px no-repeat;
+	background-position: 50% 0;
+	background-repeat: no-repeat;
 	background-attachment: fixed;
   font: 400 14px/1.2 HelveticaNeue, Arial, sans-serif;
-	@media (max-width: 1600px) {
-		background-image: none;
-	}
-	@media (min-width: 1600px) {
-		background-position: 100% 40px;
-	}
 }
 ol,
 ul {
@@ -101,13 +85,14 @@ a {
 }
 p,
 li {
-	font-size: 12px;
+	font-size: 14px;
 	line-height: 1.2;
 	text-align: justify;
 }
 table {
 	width: 100%;
 	border-collapse: collapse;
+	font-size: 14px;
 	th {
 		color: $green;
 		font-weight: 300;
@@ -117,7 +102,6 @@ table {
 		text-align: center;
 	}
 }
-
 .header-inner {
 	max-width: 820px;
 	margin: 50px auto;
@@ -141,7 +125,7 @@ table {
 	letter-spacing: 20.5px;
 	color: $orange;
 	padding: 0;
-	margin: 0 -20px 5px 15px;
+	margin: 0 -20px 15px 15px;
 	text-transform: uppercase;
 }
 .menu {
@@ -216,7 +200,7 @@ footer {
 		position: absolute;
 		height: 12px;
 		background-color: $green;
-		width: 600px;
+		width: 640px;
 		margin-left: -410px;
 		top: -50px;
 		-ms-transform: skewX(-23deg);
@@ -228,8 +212,8 @@ footer {
 		position: absolute;
 		height: 12px;
 		background-color: $orange;
-		width: 600px;
-		margin-left: -260px;
+		width: 640px;
+		margin-left: -240px;
 		top: -30px;
 		-ms-transform: skewX(-23deg);
 		-webkit-transform: skewX(-23deg);
@@ -299,9 +283,11 @@ footer {
 		margin-right: 20px;
 		letter-spacing: 3.5px;
 	}
+	+.nav-info {
+		float: right;
+	}
 }
 .nav-info {
-	float: right;
 	font-size: 11px;
 	letter-spacing: 3.5px;
 	a:hover {
@@ -346,18 +332,51 @@ footer {
 		color: $gray;
 	}
 }
-.projects {
+.info {
   width: 790px;
 	margin-bottom: 90px;
+	h2 {
+		margin-bottom: 0;
+	}
 	h2 + .sub-2 {
 		margin: 10px 0;
 		letter-spacing: 1px;
 	}
   &__item {
-    padding: 0 200px 15px 0;
+    padding: 0 0 15px 0;
 		margin-bottom: 22px;
     border-bottom: 1px solid #008090;
+		h2,
+		p {
+			cursor: pointer;
+			padding-right: 200px;
+		}
   }
+	&--technics {
+		h2 + .sub-2 {
+			padding: 0;
+			margin: 0;
+		}
+	}
+	&__img-text {
+		margin-top: 15px;
+	}
+	&__img {
+		position: relative;
+		height: 334px;
+		margin-bottom: 20px;
+		img {
+			position: absolute;
+			z-index: 0;
+		}
+	}
+	&__img-mask {
+		position: absolute;
+		z-index: 1;
+		width: 100%;
+		background: url(../img/mask.png) 0 0 no-repeat;
+		height: 334px;
+	}
 }
 
 .text {
@@ -374,4 +393,33 @@ footer {
 	&__item {
 		margin-bottom: 33px;
 	}
+}
+
+.technics-info {
+	p {
+		margin: 0;
+	}
+	table {
+		width: 250px;
+		td {
+			text-align: left;
+			font-size: 12px;
+		}
+		td:first-child {
+			width: 175px;
+		}
+		td:last-child {
+			width: 75px;
+		}
+	}
+}
+.top-btn {
+	text-transform: uppercase;
+	font-size: 11px;
+	color: $green;
+	position: relative;
+	bottom: -70px;
+	cursor: pointer;
+	float: right;
+	letter-spacing: 3px;
 }
