--- a/src/template.jade
+++ b/src/template.jade
@@ -8,7 +8,8 @@ html(lang="ru")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
 		title Балттехника
 		+styles('css/normalize.css', 'style.css')
-	body
+		+scripts('https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js', 'js/balttechnic.js')
+	body(style="background-image:url(img/bg-main.jpg);")
 		header
 			.header-inner
 				a(href="index.html")
@@ -16,8 +17,8 @@ html(lang="ru")
 				.menu-lang
 					h1.company-name Дноуглубительная компания
 					ul.menu
-						li.current-menu-item
-							a(href="") О компании
+						li
+							a(href="text.html") О компании
 						li
 							a(href="technics.html") Техника
 						li
@@ -26,6 +27,7 @@ html(lang="ru")
 							a(href="contact.html") Контакты
 					.lang
 						a(href="") English
+		// /header
 		block content
 
 		footer
@@ -33,4 +35,3 @@ html(lang="ru")
 				h4 Культурный подход к дноуглублению
 				p ООО «Балттехника», Санкт-Петербург, 197342, наб. Черной речки, 15, офис 62
 				p тел (812) 313 65 98, факс (812) 313 65 99, info@balttehnika.ru
-	//- +scripts('https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js', 'js/balttechnic.js')
