--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -122,7 +122,7 @@ table {
 .company-name {
 	font-weight: 300;
 	font-size: 19px;
-	letter-spacing: 20.5px;
+	letter-spacing: 20px;
 	color: $orange;
 	padding: 0;
 	margin: 0 -20px 15px 15px;
@@ -310,7 +310,7 @@ footer {
 		width: 0;
 		height: 0;
 		border-top: 4px solid transparent;
-		border-bottom: 4px solid transparent;			
+		border-bottom: 4px solid transparent;
 	}
 	&--prev {
 		padding-left: 13px;
@@ -385,8 +385,8 @@ footer {
 	h3,
 	h4,
 	h5,
-	p, 
-	li, 
+	p,
+	li,
 	table {
 		width: 550px;
 	}
@@ -422,4 +422,48 @@ footer {
 	cursor: pointer;
 	float: right;
 	letter-spacing: 3px;
+}
+
+
+.main-content {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+}
+.left-pic {
+  width: calc(50% - 405px);
+  width: -webkit-calc(50% - 405px);
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 800px;
+  @media (max-width: 1100px) {
+    visibility: hidden;
+  }
+}
+main {
+  width: 830px;
+  padding-right: 20px;
+  box-sizing: border-box;
+}
+.right-pic {
+  width: calc(50% - 425px);
+  width: -webkit-calc(50% - 425px);
+  position: relative;
+}
+.right-pic-bg {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+  position: fixed;
+  width: calc(50% - 425px);
+  width: -webkit-calc(50% - 425px);
+  @media (max-width: 1100px) {
+    visibility: hidden;
+  }
 }
