--- a/src/template.jade
+++ b/src/template.jade
@@ -9,29 +9,35 @@ html(lang="ru")
 		title Балттехника
 		+styles('css/normalize.css', 'style.css')
 		+scripts('https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js', 'js/balttechnic.js')
-	body(style="background-image:url(img/bg-main.jpg);")
-		header
-			.header-inner
-				a(href="index.html")
-					img(src="img/logo.png", alt="")
-				.menu-lang
-					h1.company-name Дноуглубительная компания
-					ul.menu
-						li
-							a(href="text.html") О компании
-						li
-							a(href="technics.html") Техника
-						li
-							a(href="projects.html") Проекты
-						li
-							a(href="contact.html") Контакты
-					.lang
-						a(href="") English
-		// /header
-		block content
+	//- body(style="background-image:url(img/bg-main.jpg);")
+	body
+		.main-content
+			.left-pic(style="background-image: url('img/bg-main-left.jpg');")
+			main
+				header
+					.header-inner
+						a(href="index.html")
+							img(src="img/logo.png", alt="")
+						.menu-lang
+							h1.company-name Дноуглубительная компания
+							ul.menu
+								li
+									a(href="text.html") О компании
+								li
+									a(href="technics.html") Техника
+								li
+									a(href="projects.html") Проекты
+								li
+									a(href="contact.html") Контакты
+							.lang
+								a(href="") English
+				// /header
+				block content
 
-		footer
-			.footer-inner
-				h4 Культурный подход к дноуглублению
-				p ООО «Балттехника», Санкт-Петербург, 197342, наб. Черной речки, 15, офис 62
-				p тел (812) 313 65 98, факс (812) 313 65 99, info@balttehnika.ru
+				footer
+					.footer-inner
+						h4 Культурный подход к дноуглублению
+						p ООО «Балттехника», Санкт-Петербург, 197342, наб. Черной речки, 15, офис 62
+						p тел (812) 313 65 98, факс (812) 313 65 99, info@balttehnika.ru
+			.right-pic
+				.right-pic-bg(style="background-image: url('img/bg-main-right.jpg');")
