--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,7 +26,10 @@ body {
 	background-position: 50% 0;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-  font: 400 14px/1.2 HelveticaNeue, Arial, sans-serif;
+	font: 400 14px/1.2 HelveticaNeue, Arial, sans-serif;
+	@media (min-width: 830px) {
+    min-width: 830px;
+  }
 }
 ol,
 ul {
@@ -132,7 +135,7 @@ table {
 	float: left;
 	padding: 0 0 0 10px;
 	margin: 0;
-	width: 80%;
+	// width: 80%;
 	box-sizing: border-box;
 	li {
 		float: left;
@@ -445,11 +448,17 @@ footer {
   @media (max-width: 1100px) {
     visibility: hidden;
   }
+  @media (max-width: 830px) {
+    display: none;
+  }
 }
 main {
   width: 830px;
   padding-right: 20px;
   box-sizing: border-box;
+  @media (max-width: 830px) {
+    width: 100%;
+  }
 }
 .right-pic {
   width: calc(50% - 425px);
@@ -465,5 +474,8 @@ main {
   width: -webkit-calc(50% - 425px);
   @media (max-width: 1100px) {
     visibility: hidden;
+  }
+  @media (max-width: 830px) {
+    display: none;
   }
 }
