--- a/src/template.jade
+++ b/src/template.jade
@@ -4,12 +4,11 @@ doctype html
 html(lang="ru")
 	head
 		meta(charset="UTF-8")
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
+		//- meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		title Балттехника
 		+styles('css/normalize.css', 'style.css')
 		+scripts('https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js', 'js/balttechnic.js')
-	//- body(style="background-image:url(img/bg-main.jpg);")
 	body
 		.main-content
 			.left-pic(style="background-image: url('img/bg-main-left.jpg');")
