--- a/src/technics.jade
+++ b/src/technics.jade
@@ -2,152 +2,151 @@ extends template.jade
 
 block content
 	main
-		.wrapper
-			.counter-nav.counter-nav--top
-				.nav-info
-					a(href="").nav-info--prev Пред.
-					span /
-					a(href="").nav-info--next След.
-			.info.info--technics
-				.info__item(data-img="img/img-1-bg.jpg")
-					h2 Бастион
-					p.sub-2 Плавэкскаватор
-					.info__img-text
-						.info__img
-							.info__img-mask
-							img(src="img/img-1.jpg", alt="")
-						.technics-info
-							p Характеристики
-							table
-								tr
-									td Длина (м)
-									td 49,90
-								tr
-									td Ширина (м)
-									td 13,80
-								tr
-									td Осадка (м)
-									td 2,10
-								tr
-									td Объем ковша (м3)
-									td 6,50
-								tr
-									td Глубина черпания (м)
-									td 0…18
-						p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
-				// /.info__item
-				.info__item(data-img="img/img-2-bg.jpg")
-					h2 Александр Уваров
-					p.sub-2 Многочерпаковый самоходный земснаряд
-					.info__img-text
-						.info__img
-							.info__img-mask
-							img(src="img/img-2.jpg", alt="")
-						.technics-info
-							p Характеристики
-							table
-								tr
-									td Длина (м)
-									td 49,90
-								tr
-									td Ширина (м)
-									td 13,80
-								tr
-									td Осадка (м)
-									td 2,10
-								tr
-									td Объем ковша (м3)
-									td 6,50
-								tr
-									td Глубина черпания (м)
-									td 0…18
-						p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
-				// /.info__item
-				.info__item(data-img="img/img-1-bg.jpg")
-					h2 ГП-12
-					p.sub-2 Плавучий гидроперегружатель
-					.info__img-text
-						.info__img
-							.info__img-mask
-							img(src="img/img-1.jpg", alt="")
-						.technics-info
-							p Характеристики
-							table
-								tr
-									td Длина (м)
-									td 49,90
-								tr
-									td Ширина (м)
-									td 13,80
-								tr
-									td Осадка (м)
-									td 2,10
-								tr
-									td Объем ковша (м3)
-									td 6,50
-								tr
-									td Глубина черпания (м)
-									td 0…18
-						p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
-				// /.info__item
-				.info__item(data-img="img/img-2-bg.jpg")
-					h2 Онежская
-					p.sub-2 Самоходная грунтоотвозная шаланда с лядовыми дверцами
-					.info__img-text
-						.info__img
-							.info__img-mask
-							img(src="img/img-2.jpg", alt="")
-						.technics-info
-							p Характеристики
-							table
-								tr
-									td Длина (м)
-									td 49,90
-								tr
-									td Ширина (м)
-									td 13,80
-								tr
-									td Осадка (м)
-									td 2,10
-								tr
-									td Объем ковша (м3)
-									td 6,50
-								tr
-									td Глубина черпания (м)
-									td 0…18
-						p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
-				// /.info__item
-				.info__item(data-img="img/img-3-bg.jpg")
-					h2 Портовый-9
-					p.sub-2 Несамоходный рефулерный землесос
-					.info__img-text
-						.info__img
-							.info__img-mask
-							img(src="img/img-3.jpg", alt="")
-						.technics-info
-							p Характеристики
-							table
-								tr
-									td Длина (м)
-									td 49,90
-								tr
-									td Ширина (м)
-									td 13,80
-								tr
-									td Осадка (м)
-									td 2,10
-								tr
-									td Объем ковша (м3)
-									td 6,50
-								tr
-									td Глубина черпания (м)
-									td 0…18
-						p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
-				// /.info__item
-			.counter-nav.counter-nav--bottom
-				.nav-info
-					a(href="").nav-info--prev Пред.
-					span /
-					a(href="").nav-info--next След.
-			.top-btn Наверх
-		// /.wrapper
+		.counter-nav.counter-nav--top
+			.nav-info
+				a(href="").nav-info--prev Пред.
+				span /
+				a(href="").nav-info--next След.
+		.info.info--technics
+			.info__item(data-img-left="img/img-1-bg-left.jpg" data-img-right="img/img-1-bg-right.jpg")
+				h2 Бастион
+				p.sub-2 Плавэкскаватор
+				.info__img-text
+					.info__img
+						.info__img-mask
+						img(src="img/img-1.jpg", alt="")
+					.technics-info
+						p Характеристики
+						table
+							tr
+								td Длина (м)
+								td 49,90
+							tr
+								td Ширина (м)
+								td 13,80
+							tr
+								td Осадка (м)
+								td 2,10
+							tr
+								td Объем ковша (м3)
+								td 6,50
+							tr
+								td Глубина черпания (м)
+								td 0…18
+					p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
+			// /.info__item
+			.info__item(data-img-left="img/img-2-bg-left.jpg" data-img-right="img/img-2-bg-right.jpg")
+				h2 Александр Уваров
+				p.sub-2 Многочерпаковый самоходный земснаряд
+				.info__img-text
+					.info__img
+						.info__img-mask
+						img(src="img/img-2.jpg", alt="")
+					.technics-info
+						p Характеристики
+						table
+							tr
+								td Длина (м)
+								td 49,90
+							tr
+								td Ширина (м)
+								td 13,80
+							tr
+								td Осадка (м)
+								td 2,10
+							tr
+								td Объем ковша (м3)
+								td 6,50
+							tr
+								td Глубина черпания (м)
+								td 0…18
+					p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
+			// /.info__item
+			.info__item(data-img-left="img/img-3-bg-left.jpg" data-img-right="img/img-3-bg-right.jpg")
+				h2 ГП-12
+				p.sub-2 Плавучий гидроперегружатель
+				.info__img-text
+					.info__img
+						.info__img-mask
+						img(src="img/img-1.jpg", alt="")
+					.technics-info
+						p Характеристики
+						table
+							tr
+								td Длина (м)
+								td 49,90
+							tr
+								td Ширина (м)
+								td 13,80
+							tr
+								td Осадка (м)
+								td 2,10
+							tr
+								td Объем ковша (м3)
+								td 6,50
+							tr
+								td Глубина черпания (м)
+								td 0…18
+					p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
+			// /.info__item
+			.info__item(data-img-left="img/img-2-bg-left.jpg" data-img-right="img/img-2-bg-right.jpg")
+				h2 Онежская
+				p.sub-2 Самоходная грунтоотвозная шаланда с лядовыми дверцами
+				.info__img-text
+					.info__img
+						.info__img-mask
+						img(src="img/img-2.jpg", alt="")
+					.technics-info
+						p Характеристики
+						table
+							tr
+								td Длина (м)
+								td 49,90
+							tr
+								td Ширина (м)
+								td 13,80
+							tr
+								td Осадка (м)
+								td 2,10
+							tr
+								td Объем ковша (м3)
+								td 6,50
+							tr
+								td Глубина черпания (м)
+								td 0…18
+					p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
+			// /.info__item
+			.info__item(data-img-left="img/img-1-bg-left.jpg" data-img-right="img/img-1-bg-right.jpg")
+				h2 Портовый-9
+				p.sub-2 Несамоходный рефулерный землесос
+				.info__img-text
+					.info__img
+						.info__img-mask
+						img(src="img/img-3.jpg", alt="")
+					.technics-info
+						p Характеристики
+						table
+							tr
+								td Длина (м)
+								td 49,90
+							tr
+								td Ширина (м)
+								td 13,80
+							tr
+								td Осадка (м)
+								td 2,10
+							tr
+								td Объем ковша (м3)
+								td 6,50
+							tr
+								td Глубина черпания (м)
+								td 0…18
+					p Является несамоходным одноковшовым штанговым гидравлическим дноуглубительным земснарядом, способным выполнять дноуглубительные работы как с выгрузкой грунта в грунтоотвозные шаланды, так и в отвал. Очень эффективен в использовании при производстве работ вблизи причалов, свай и опор морских сооружений, при рытье каналов и фарватеров, а также на тяжелых категориях грунта.
+			// /.info__item
+		.counter-nav.counter-nav--bottom
+			.nav-info
+				a(href="").nav-info--prev Пред.
+				span /
+				a(href="").nav-info--next След.
+		.top-btn Наверх
+	// /.wrapper
