--- a/src/template.jade
+++ b/src/template.jade
@@ -11,7 +11,7 @@ html(lang="ru")
 		+scripts('https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js', 'js/balttechnic.js')
 	body
 		.main-content
-			.left-pic(style="background-image: url('img/bg-main-left.jpg');")
+			.left-pic(style="background-image: url('img/bg-about-left.jpg');")
 			main
 				header
 					.header-inner
@@ -20,7 +20,7 @@ html(lang="ru")
 						.menu-lang
 							h1.company-name Дноуглубительная компания
 							ul.menu
-								li
+								li.current-menu-item
 									a(href="text.html") О компании
 								li
 									a(href="technics.html") Техника
@@ -39,4 +39,4 @@ html(lang="ru")
 						p ООО «Балттехника», Санкт-Петербург, 197342, наб. Черной речки, 15, офис 62
 						p тел (812) 313 65 98, факс (812) 313 65 99, info@balttehnika.ru
 			.right-pic
-				.right-pic-bg(style="background-image: url('img/bg-main-right.jpg');")
+				.right-pic-bg(style="background-image: url('img/bg-about-right.jpg');")
