--- a/src/text.jade
+++ b/src/text.jade
@@ -1,48 +1,49 @@
 extends template.jade
 
 block content
-	main
-		.wrapper
-			.text
-				.text__item
-					h1 Заголовок первого уровня можно использовать только один раз на странице
-				.text__item
-					h2 Заголовок второго уровня Заголовок второго уровня
-					p.sub-2 Подзаголовок второго уровня Подзаголовок второго уровня
-					p Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 ptЭто просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt, tracking 50
-				.text__item
-					h3 Заголовок третьего уровня Заголовок третьего уровня
-					p.sub-3 Подзаголовок третьего уровня Подзаголовок третьего уровня Подзаголовок третьего уровня
-					p Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 ptЭто просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt, tracking 50
-				.text__item
-					h4 Заголовок четвертого уровня Заголовок четвертого уровня
-					p Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 ptЭто просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt, tracking 50
-				.text__item
-					p Список неупорядоченный
-					ul
-						li Элемент 1, который очень-очень длинный и все идет, идет. И не кончается, а это все еще обычный элемент, просто он разошелся аж на 2 строчки
-						li Элемент 2
-						li Элемент 3
-				.text__item
-					p Список упорядоченный
-					ol
-						li Элемент 1, который очень-очень длинный и все идет, идет. И не кончается, а это все еще обычный элемент, просто он разошелся аж на 2 строчки
-						li Элемент 2
-						li Элемент 3
-				.text__item 
-					table
-						tr
-							th Хедер таблица
-							th Хедер таблица
-							th Хедер таблица
-							th Хедер таблица
-						tr
-							td Элемент
-							td Элемент
-							td Элемент
-							td Элемент
-						tr
-							td Элемент
-							td Элемент
-							td Элемент
-							td Элемент
+	.wrapper
+		.text
+			.text__item
+				h1 Заголовок первого уровня можно использовать только один раз на странице
+			.text__item
+				h2 Заголовок второго уровня Заголовок второго уровня
+				p.sub-2 Подзаголовок второго уровня Подзаголовок второго уровня
+				p Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 ptЭто просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt, tracking 50
+			.text__item
+				h3 Заголовок третьего уровня Заголовок третьего уровня
+				p.sub-3 Подзаголовок третьего уровня Подзаголовок третьего уровня Подзаголовок третьего уровня
+				p Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 ptЭто просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt, tracking 50
+			.text__item
+				h4 Заголовок четвертого уровня Заголовок четвертого уровня
+				p Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 ptЭто просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt Это просто параграф Helvetica Neue (Light) 12 pt, tracking 50
+			.text__item
+				p Список неупорядоченный
+				ul
+					li Элемент 1, который очень-очень длинный и все идет, идет. И не кончается, а это все еще обычный элемент, просто он разошелся аж на 2 строчки
+					li Элемент 2
+					li Элемент 3
+			.text__item
+				p Список упорядоченный
+				ol
+					li Элемент 1, который очень-очень длинный и все идет, идет. И не кончается, а это все еще обычный элемент, просто он разошелся аж на 2 строчки
+					li Элемент 2
+					li Элемент 3
+			.text__item 
+				table
+					tr
+						th Хедер таблица
+						th Хедер таблица
+						th Хедер таблица
+						th Хедер таблица
+					tr
+						td Элемент
+						td Элемент
+						td Элемент
+						td Элемент
+					tr
+						td Элемент
+						td Элемент
+						td Элемент
+						td Элемент
+		// /.text
+	// /.wrapper
